--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial‐scale=1.0" />
   <title>Artificial Intelligence Made Easy</title>
-
   <style>
-    /* ──────────────────────────────────────────────────────────────────
+    /* ──────────────────────────────────────────────────────────────────────────
        Global Styles (adapted from Speak Theme)
-    ────────────────────────────────────────────────────────────────── */
+       ────────────────────────────────────────────────────────────────────────── */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -145,9 +144,9 @@
       border-top: 1px solid #333;
     }
 
-    /* ──────────────────────────────────────────────────────────────────
+    /* ──────────────────────────────────────────────────────────────────────────
        Masked Video Styles
-    ────────────────────────────────────────────────────────────────── */
+       ────────────────────────────────────────────────────────────────────────── */
     .video-container {
       position: relative;
       padding-bottom: 56.25%;
@@ -158,8 +157,10 @@
 
     .video-wrapper {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
       border-radius: 8px;
       background: #000;
@@ -167,8 +168,10 @@
 
     .placeholder-frame {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background-image: url('https://img.youtube.com/vi/3gGz-jLkYoI/maxresdefault.jpg');
       background-size: cover;
       background-position: center;
@@ -178,9 +181,11 @@
 
     .play-button {
       position: absolute;
-      top: 50%; left: 50%;
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
-      width: 80px; height: 80px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       background: rgba(255, 255, 255, 0.85);
       box-shadow: 0 0 15px #ffeb3b;
@@ -193,7 +198,8 @@
     .play-button::after {
       content: '';
       display: block;
-      width: 0; height: 0;
+      width: 0;
+      height: 0;
       border-left: 25px solid #000;
       border-top: 15px solid transparent;
       border-bottom: 15px solid transparent;
@@ -201,23 +207,27 @@
 
     #player {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       display: none;
       z-index: 0;
     }
 
     .click-overlay {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       z-index: 200;
       cursor: pointer;
     }
 
-    /* ──────────────────────────────────────────────────────────────────
+    /* ──────────────────────────────────────────────────────────────────────────
        Sign-Up Button Styles
-    ────────────────────────────────────────────────────────────────── */
+       ────────────────────────────────────────────────────────────────────────── */
     .sign-up-btn {
       display: none;
       position: absolute;
@@ -242,8 +252,8 @@
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
     <div class="title-group">
       <span>Artificial Intelligence.</span>
@@ -265,14 +275,16 @@
           <div class="click-overlay"></div>
         </div>
       </div>
-
-      <button class="sign-up-btn"
-        onclick="window.location='https://www.stemsphere.academy/products/courses/ai-made-simple'">
+      <button
+        class="sign-up-btn"
+        onclick="window.location='https://www.stemsphere.academy/products/courses/ai-made-simple'"
+      >
         Enroll Now
       </button>
     </div>
 
     <div class="arrow-up">↑↑↑↑</div>
+
     <div class="access-message">What the Course Covers</div>
 
     <div class="video-message">
@@ -294,7 +306,8 @@
 
   <!-- YouTube & Sign-Up Button Script -->
   <script>
-    let player, checkInterval;
+    let player,
+        checkInterval;
     const milestones = { signUp: 201 };
     const shown = { signUp: false };
 
@@ -307,27 +320,37 @@
         host: 'https://www.youtube-nocookie.com',
         videoId: '3gGz-jLkYoI',
         playerVars: {
-          controls: 0, disablekb: 1, fs: 0,
-          modestbranding: 1, rel: 0, iv_load_policy: 3,
-          enablejsapi: 1, autoplay: 0
+          controls: 0,
+          disablekb: 1,
+          fs: 0,
+          modestbranding: 1,
+          rel: 0,
+          iv_load_policy: 3,
+          enablejsapi: 1,
+          autoplay: 0
         },
         events: {
           onReady: () => {
-            document.querySelector('.click-overlay').addEventListener('click', () => {
-              if (player.getPlayerState() !== YT.PlayerState.PLAYING) {
-                document.getElementById('placeholder').style.display = 'none';
-                document.getElementById('playBtn').style.display = 'none';
-                document.getElementById('player').style.display = 'block';
-                player.playVideo();
-              } else {
-                player.pauseVideo();
-              }
-            });
+            document
+              .querySelector('.click-overlay')
+              .addEventListener('click', () => {
+                if (player.getPlayerState() !== YT.PlayerState.PLAYING) {
+                  document.getElementById('placeholder').style.display = 'none';
+                  document.getElementById('playBtn').style.display = 'none';
+                  document.getElementById('player').style.display = 'block';
+                  player.playVideo();
+                } else {
+                  player.pauseVideo();
+                }
+              });
           },
           onStateChange: e => {
             if (e.data === YT.PlayerState.PLAYING) {
               checkInterval = setInterval(() => {
-                if (player.getCurrentTime() >= milestones.signUp && !shown.signUp) {
+                if (
+                  player.getCurrentTime() >= milestones.signUp &&
+                  !shown.signUp
+                ) {
                   shown.signUp = true;
                   document.querySelector('.sign-up-btn').style.display = 'block';
                 }
@@ -343,102 +366,76 @@
 
   <!-- Reviews Dropdown Script (unchanged) -->
   <script>
-  (async () => {
-    const slug = 'ai-made-simple';
-    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRSWqhCcu_XZW7SW5uZ3UZdKzvLm2zNw8DvMZV2TD_gcts6K-DBrLwd88pnXVn0xl0fxRRfGW0Y4iyN/pub?output=csv';
-    const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSd0lD5dU8nsUbBzfqqRkLflTkJVrAQyvZXI81uXXyOPXpoUdA/viewform?usp=header';
+    (async () => {
+      const slug = 'ai-made-simple';
+      const csvUrl =
+        'https://docs.google.com/spreadsheets/d/e/2PACX-1vRSWqhCcu_XZW7SW5uZ3UZdKzvLm2zNw8DvMZV2TD_gcts6K-DBrLwd88pnXVn0xl0fxRRfGW0Y4iyN/pub?output=csv';
+      const formUrl =
+        'https://docs.google.com/forms/d/e/1FAIpQLSd0lD5dU8nsUbBzfqqRkLflTkJVrAQyvZXI81uXXyOPXpoUdA/viewform?usp=header';
 
-    const res = await fetch(csvUrl);
-    const text = await res.text();
-    const rows = text.trim().split('\n').slice(1).map(r =>
-      r.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(c => c.replace(/^"|"$/g, ''))
-    );
+      const res = await fetch(csvUrl);
+      const text = await res.text();
+      const rows = text
+        .trim()
+        .split('\n')
+        .slice(1)
+        .map(r =>
+          r
+            .split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/)
+            .map(c => c.replace(/^"|"$/g, ''))
+        );
 
-    const reviews = rows
-      .filter(r => r[4] && r[4].toLowerCase() === slug)
-      .sort((a, b) => new Date(b[3]) - new Date(a[3]));
-    if (!reviews.length) return;
+      const reviews = rows
+        .filter(r => r[4] && r[4].toLowerCase() === slug)
+        .sort((a, b) => new Date(b[3]) - new Date(a[3]));
 
-    const avg = (reviews.reduce((sum, r) => sum + parseFloat(r[2]||0), 0) / reviews.length).toFixed(1);
-    const count = reviews.length;
+      if (!reviews.length) return;
 
-    const wrapper = document.createElement('div');
-    wrapper.className = 'reviews-summary';
-    wrapper.style.cssText = `
-      margin:2em 0; padding-top:1em; border-top:1px solid #444;
-      color:#ccc; font-family:inherit;
-    `;
-    wrapper.innerHTML = `
-      <div style="margin-bottom:0.5em;">
-        <span style="
-          background:#2e7d32; color:#fff;
-          padding:0.3em 0.8em; border-radius:20px;
-          font-size:0.9em; font-weight:bold;
-        ">
-          ⭐ Purchased by students worldwide
-        </span>
-      </div>
-      <h3 style="
-        font-weight:600; margin:0.8em 0 0.6em; color:#fff;
-      ">
-        <span style="color:#FFD700; font-size:1.2em;">★</span>
-        ${avg} (${count} review${count>1?'s':''})
-      </h3>
-      <div style="display:flex; gap:0.8em; flex-wrap:wrap; margin:1em 0;">
-        <button id="toggle-reviews" style="
-          padding:0.5em 1em; font-size:0.95em;
-          background:linear-gradient(145deg,#2a2a2a,#1e1e1e);
-          color:#f1f1f1; border:1px solid #555;
-          border-radius:6px; cursor:pointer;
-        ">See all reviews</button>
-        <button id="submit-review" style="
-          padding:0.5em 1em; font-size:0.95em;
-          background:linear-gradient(145deg,#2a2a2a,#1e1e1e);
-          color:#f1f1f1; border:1px solid #555;
-          border-radius:6px; cursor:pointer;
-        ">Submit a review</button>
-      </div>
-      <div id="reviews-body" style="margin-top:1.2em; display:none;">
-        ${reviews.map(r => `
-          <div style="margin-bottom:1.5em;">
-            <strong style="color:#eee;">${r[0]||'Anonymous'}</strong>
-            ${'★'.repeat(+r[2]).padEnd(5,'☆')
-              .replace(/★/g, '<span style="color:#FFD700;">★</span>')
-              .replace(/☆/g, '<span style="color:#ccc;">★</span>')}<br>
-            <small style="color:#aaa;">
-              ${new Date(r[3]).toLocaleDateString()}
-            </small>
-            <p style="margin:0.4em 0 0; color:#ccc; line-height:1.4;">
-              ${r[1]}
-            </p>
-            ${r[5] ? `
-              <div style="margin-left:1em; margin-top:0.3em;">
-                <div style="
-                  font-size:0.85em; color:#89c4ff; margin-bottom:0.2em;
-                  font-weight:600;
-                ">Instructor Reply:</div>
-                <div style="
-                  font-size:0.85em; color:#7fbfff; font-style:italic;
-                ">${r[5]}</div>
-              </div>` : ''}
-          </div>
-        `).join('')}
-      </div>
-    `;
+      const avg = (
+        reviews.reduce((sum, r) => sum + parseFloat(r[2] || 0), 0) /
+        reviews.length
+      ).toFixed(1);
+      const count = reviews.length;
 
-    document.getElementById('reviews-container').appendChild(wrapper);
-    document.getElementById('submit-review')
-      .addEventListener('click', () => window.open(formUrl, '_blank'));
-    document.getElementById('toggle-reviews')
-      .addEventListener('click', e => {
-        const body = document.getElementById('reviews-body');
-        const show = body.style.display === 'block';
-        body.style.display = show ? 'none' : 'block';
-        e.target.textContent = show ? 'See all reviews' : 'Hide reviews';
-      });
-  })();
+      const wrapper = document.createElement('div');
+      wrapper.className = 'reviews-summary';
+      wrapper.style.cssText = `
+        margin:2em 0;
+        padding-top:1em;
+        border-top:1px solid #444;
+        color:#ccc;
+        font-family:inherit;
+      `;
+
+      wrapper.innerHTML = `
+        <div style="margin-bottom:0.5em;">
+          <span style="
+            background:#2e7d32;
+            color:#fff;
+            padding:0.3em 0.8em;
+            border-radius:4px;
+            font-size:0.9em;
+          ">
+            ${avg} ★ (${count})
+          </span>
+          <a
+            href="${formUrl}"
+            target="_blank"
+            style="
+              color:#fff;
+              margin-left:0.5em;
+              font-size:0.9em;
+              text-decoration:underline;
+            "
+          >
+            Read all reviews
+          </a>
+        </div>
+      `;
+
+      document.querySelector('main').appendChild(wrapper);
+    })();
   </script>
-
 </body>
 </html>
 ```
